2007-11-15  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* README:
	* configure.ac:
	Bumped Gtk+ version to 2.12
	
	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_focus):
	Use focus->color if is set in the gtkrc
	
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Improvements in the draw_focus code, no changes in drawing
	
	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_gtk2_rc_parse_color), (clearlooks_rc_style_parse):
	Use gtk_rc_parse_color_full (Gtk+ 2.12)

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_focus):
	focus->color is now initialized to FALSE (ooops fixed!)

2007-11-15  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* README:
	* configure.ac:
	Bumped Gtk+ version to 2.12
	

2007-11-14  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_entry), (clearlooks_gummy_draw_slider),
	(clearlooks_gummy_draw_scrollbar_stepper),
	(clearlooks_gummy_draw_scrollbar_slider),
	(clearlooks_gummy_draw_radiobutton), (clearlooks_gummy_draw_focus):
	Changed gummy focused entry color
	and whiteuselessspaces :)
	
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_realize):
	Changed spot[0]. (I'd like to deprecate it in the future)

2007-11-12  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.13.0 release.

2007-11-12  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_focus):
	Fix a double free by removing a broken cairo_destroy.

2007-11-12  Benjamin Berg  <benjamin@sipsolutions.net>

	* schema/clearlooks.xml.in.in:
	Add missing options to the clearlooks schema file. (Bug #475294)
	Thanks to Werner Pantke for the patch!

2007-11-12  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_focus):
	* engines/clearlooks/src/clearlooks_style.c: